--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,5 +10,28 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
+
+<!-- Hmm?? Back to your mom's house, stupid. -->
+<script>
+//   _________.__ __      __  .__          ________.__  __             
+//  /   _____/|__|  | ___/  |_|__|______  /  _____/|__|/  |_           
+//  \_____  \ |  |  |/ /\   __\  \_  __ \/   \  ___|  \   __\          
+//  /        \|  |    <  |  | |  ||  | \/\    \_\  \  ||  |            
+// /_______  /|__|__|_ \ |__| |__||__|    \______  /__||__|            
+//         \/         \/                         \/                    
+// ________                   ____  __.                                
+// \______ \   ____   ____   |    |/ _|____ ___.__.__ __  ____   ____  
+//  |    |  \ /  _ \ /    \  |      < /  _ <   |  |  |  \/    \_/ __ \ 
+//  |    `   (  <_> )   |  \ |    |  (  <_> )___  |  |  /   |  \  ___/ 
+// /_______  /\____/|___|  / |____|__ \____// ____|____/|___|  /\___  >
+//         \/            \/          \/     \/               \/     \/ 
+//           _____________________               .__                   
+//           \__    ___/\______   \_____    _____|  |__ _____          
+//   ______    |    |    |     ___/\__  \  /  ___/  |  \\__  \         
+//  /_____/    |    |    |    |     / __ \_\___ \|   Y  \/ __ \_       
+//             |____|    |____|    (____  /____  >___|  (____  /       
+//                                      \/     \/     \/     \/     
+</script>
