--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="https://pngtree.com/freepng/internet-cyber-scammer-trying-to-cheat-an-internet-user_15533211.html"/>
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShertyShop</title>
+    <title>ShartyCheat</title>
   </head>
   <body>
     <div id="root"></div>
